--- a/BuddhaBowls/UserControls/CogsControl.xaml
+++ b/BuddhaBowls/UserControls/CogsControl.xaml
@@ -23,32 +23,49 @@
                 <DataGridTextColumn Header="Start Inv" Binding="{Binding Path=StartInv, Mode=OneWay, StringFormat=c}" Width="1*" />
                 <DataGridTextColumn Header="Rec Purchases" Binding="{Binding Path=Purchases, Mode=OneWay, StringFormat=c}" Width="1*" />
                 <DataGridTextColumn Header="End Inv" Binding="{Binding Path=EndInv, Mode=OneWay, StringFormat=c}" Width="1*" />
-                <DataGridTextColumn Header="Useage" Binding="{Binding Path=Useage, Mode=OneWay, StringFormat=0.##}" Width="70" />
                 <DataGridTextColumn Header="COGS Cost" Binding="{Binding Path=CogsCost, StringFormat=c}" IsReadOnly="True" Width="2*" />
+                <DataGridTextColumn Header="Category %" Binding="{Binding Path=CatPercent, StringFormat=p}" IsReadOnly="True" Width="1*" />
             </DataGrid.Columns>
         </DataGrid>
         <Grid Grid.Row="2" Visibility="{Binding CogInfoVisibility}">
-            <Grid.ColumnDefinitions>
+            <!--<Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="3*" />
                 <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>-->
             <Grid.RowDefinitions>
                 <RowDefinition Height="30" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Button Content="Start Inventory" Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Stretch"
-                       FontSize="14" Command="{Binding StartInvCommand}" />
-            <DataGrid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding StartInv}"
+            <Button Content="Start Inventory" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Stretch"
+                       FontSize="14" Command="{Binding StartInvCommand}" Margin="10, 0, 0, 0" />
+            <Button Content="Ending Inventory" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Stretch"
+                       FontSize="14" Command="{Binding EndInvCommand}" Margin="150, 0, 0, 0" />
+            <!--<Button Content="View Order" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Stretch"
+                       FontSize="14" Command="{Binding ViewOrderCommand}" Margin="300, 0, 0, 0" />-->
+            <DataGrid Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding CatItems}"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
+                      IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*" />
+                    <DataGridTextColumn Header="Start Count" Binding="{Binding StartCount}" Width="1*" />
+                    <DataGridTextColumn Header="Start Value" Binding="{Binding Path=StartValue, StringFormat=c}" Width="1*" />
+                    <DataGridTextColumn Header="Rec Count" Binding="{Binding Path=RecCount}" Width="1*" />
+                    <DataGridTextColumn Header="Rec Value" Binding="{Binding Path=RecValue, StringFormat=c}" Width="1*" />
+                    <DataGridTextColumn Header="End Count" Binding="{Binding EndCount}" Width="1*" />
+                    <DataGridTextColumn Header="End Value" Binding="{Binding Path=EndValue, StringFormat=c}" Width="1*" />
+                </DataGrid.Columns>
+            </DataGrid>
+            <!--<DataGrid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding StartInv}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
                       IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
                     <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
                 </DataGrid.Columns>
-            </DataGrid>
-            <TextBlock Text="Received Purchases" Grid.Column="1" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
+            </DataGrid>-->
+            <!--<TextBlock Text="Received Purchases" Grid.Column="1" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
                        FontSize="18" />
             <DataGrid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RecOrders}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
@@ -80,17 +97,16 @@
                         </DataGrid>
                     </DataTemplate>
                 </DataGrid.RowDetailsTemplate>
-            </DataGrid>
-            <Button Content="Ending Inventory" Grid.Column="2" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Stretch"
-                       FontSize="14" Command="{Binding EndInvCommand}" />
-            <DataGrid Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding EndingInv}"
+            </DataGrid>-->
+            
+            <!--<DataGrid Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding EndingInv}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
                       IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
                     <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
                 </DataGrid.Columns>
-            </DataGrid>
+            </DataGrid>-->
         </Grid>
     </Grid>
 </UserControl>
